2011-03-27:
 - Improved performance of parsing files which contain include files

2011-03-26:
 - Inspection to detect array use of simple variables
 - Inspection to detect simple use of array variables
 - It is possible now to defined functions which have the same name as built-in Bash commands
 - Inspection to mark functions which override built-in Bash commands

2011-03-22:
 - (Almost) full support for arrays
 - Version 0.9.21

2011-03-12:
 - Improved array support

2011-03-08:
 - Fixed unused function inspection in files which reference elements in files which include the file

2011-02-19:
 - Fixed detection of deep recursive file include loops
 - Version 0.9.20

2011-02-18:
 - Ctrl+B on file references (e.g. in include command) is supported now
 - Issue #35: Math calculations using square brackets not supported

2011-02-15:
  - Improved autocompletion

2011-02-12:
 - Documentation lookup for variable definitions, the comment before the definition is displayed, if available
 - Fixed documentation lookup for external command
 - Fixed some invalid autocompletion suggestions
 - Version 0.9.19

2011-02-07:
 - Variable completion from included files
 - Improved autocompletion
 - Autocompletion inside of ${}
 - Globals and built-ins are now offered after second completion call, if enabled

2011-02-06:
 - Support for include files and contained elements (find references, rename, go to defintion, ...)

2011-01-28:
 - Issue #32: Length-function not supported: Expected a command

2011-01-26:
 - Issue #34: Unresolved variable in string definition
 - Issue #35: Math calculations using square brackets not supported
 - Issue #36: Incorrect inspection of unused parameter when using $* inside function

2010-12-29:
 - More inspection test cases
 - Bugfixes
 - Version 0.9.18

2010-12-28:
 - New inspection to convert a simple variable usage $a to the equivalent parameter expansion ${a}
 - New inspection to highlight unused parameter values for function calls